# U3D

./: .build-env.template  .editorconfig  .gitattributes  .gitignore  APPLE_README.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  lint.xml  rakefile  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml  docs.yml  ios.yml  linux.yml  macos.yml  mingw.yml  qa.yml  web.yml  windows.yml
Docs/: BuildingForIOS.md  BuildingForMacOS.md  CMakeLists.txt  Doxyfile.in  GettingStarted.dox  LuaScriptAPI.dox  Reference.dox  Urho3D.dox  doxygen-awesome.css
Source/: CMakeLists.txt
Source/Clang-Tools/: CMakeLists.txt
Source/Clang-Tools/Annotator/: Annotator.cpp
Source/Clang-Tools/AutoBinder/: AutoBinder.cpp
Source/Extras/: Readme.txt
Source/Extras/BlenderExporter/: .gitignore  __init__.py  blender_manifest.toml  decompose.py  exporter.py  importer.py  utils.py
Source/Samples/03_Sprites/: Sprites.cpp
Source/Samples/04_StaticScene/: StaticScene.cpp
Source/Samples/05_AnimatingScene/: AnimatingScene.cpp
Source/Samples/06_SkeletalAnimation/: Mover.cpp  Mover.h  SkeletalAnimation.cpp
Source/Samples/07_Billboards/: Billboards.cpp
Source/Samples/08_Decals/: Decals.cpp
Source/Samples/09_MultipleViewports/: MultipleViewports.cpp
Source/Samples/10_RenderToTexture/: RenderToTexture.cpp
Source/Samples/11_Physics/: Physics.cpp
Source/Samples/12_PhysicsStressTest/: PhysicsStressTest.cpp
Source/Samples/13_Ragdolls/: CreateRagdoll.cpp  CreateRagdoll.h  Ragdolls.cpp
Source/Samples/14_SoundEffects/: SoundEffects.cpp
Source/Samples/15_Navigation/: Navigation.cpp
Source/Samples/16_Chat/: Chat.cpp
Source/Samples/17_SceneReplication/: SceneReplication.cpp
Source/Samples/18_CharacterDemo/: Character.cpp  CharacterDemo.cpp  CharacterDemo.h
Source/Samples/19_VehicleDemo/: Vehicle.cpp  Vehicle.h  VehicleDemo.cpp
Source/Samples/20_HugeObjectCount/: HugeObjectCount.cpp
Source/Samples/21_AngelScriptIntegration/: AngelScriptIntegration.cpp
Source/Samples/22_LuaIntegration/: LuaIntegration.cpp
Source/Samples/24_Urho2DSprite/: Urho2DSprite.cpp  Urho2DSprite.h
Source/Samples/30_LightAnimation/: LightAnimation.cpp
Source/Samples/33_Urho2DSpriterAnimation/: Urho2DSpriterAnimation.cpp  Urho2DSpriterAnimation.h
Source/Samples/42_PBRMaterials/: CMakeLists.txt
Source/Samples/43_HttpRequestDemo/: HttpRequestDemo.cpp
Source/Samples/46_RaycastVehicle/: RaycastVehicleDemo.h
Source/Samples/51_Urho2DStretchableSprite/: Urho2DStretchableSprite.cpp
Source/Samples/52_NATPunchtrough/: NATPunchtrough.cpp
Source/Samples/56_PhysicsSandbox/: CMakeLists.txt  PhysicsSandbox.cpp  PhysicsSandbox.h
Source/Tools/: CMakeLists.txt
Source/Tools/AssetImporter/: AssetImporter.cpp  CMakeLists.txt  FbxImporter.cpp  FbxImporter.h
Source/Tools/BindingGenerator/: CMakeLists.txt
Source/Tools/HdrToSkybox/: hdr2skybox.sh  render-skybox.py  root.blend
Source/Tools/ModelViewer/: CMakeLists.txt  ModelViewer.cpp  ModelViewer.h
Source/Tools/OgreImporter/: OgreImporterUtils.h
Source/Tools/PackageTool/: CMakeLists.txt  PackageTool.cpp
Source/Tools/RampGenerator/: RampGenerator.cpp
Source/Tools/ScriptCompiler/: ScriptCompiler.cpp
Source/Tools/Urho3DPlayer/: CMakeLists.txt  Urho3DPlayer.cpp  Urho3DPlayer.h
Source/Urho3D/: CMakeLists.txt
Source/Urho3D/AngelScript/: APITemplates.h  Addons.cpp  Addons.h  CoreAPI.cpp  Generated_Members.h  SceneAPI.cpp  Script.cpp  Script.h  ScriptAPI.cpp  ScriptAPI.h  ScriptEventListener.h  ScriptFile.cpp  ScriptFile.h  ScriptInstance.cpp  ScriptInstance.h
Source/Urho3D/Audio/: Audio.cpp  Audio.h  AudioDefs.h  Sound.cpp  Sound.h  SoundSource.h  SoundSource3D.cpp
Source/Urho3D/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.cpp  VectorBase.h
Source/Urho3D/Core/: Attribute.h  Condition.cpp  Condition.h  Context.cpp  Context.h  Main.h  MiniDump.cpp  Mutex.cpp  Mutex.h  Object.cpp  Object.h  ProcessUtils.cpp  ProcessUtils.h  Profiler.cpp  Profiler.h  Spline.cpp  StringHashRegister.cpp  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  WorkQueue.cpp  WorkQueue.h
Source/Urho3D/Engine/: Application.cpp  Application.h  Console.cpp  Console.h  DebugHud.cpp  DebugHud.h  Engine.cpp  Engine.h  EngineEvents.h
Source/Urho3D/Graphics/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationState.cpp  AnimationState.h  Batch.cpp  Batch.h  BillboardSet.cpp  BillboardSet.h  Camera.cpp  Camera.h  CustomGeometry.cpp  CustomGeometry.h  DebugRenderer.cpp  DebugRenderer.h  DecalSet.cpp  DecalSet.h  Drawable.cpp  Drawable.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsEvents.h  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  OcclusionBuffer.cpp  OcclusionBuffer.h  Octree.cpp  Octree.h  (+34 more)
Source/Urho3D/IK/: IKSolver.cpp
Source/Urho3D/IO/: Deserializer.cpp  Deserializer.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  IOEvents.h  Log.cpp  Log.h  MacFileWatcher.h  MemoryBuffer.cpp  MemoryBuffer.h  PackageFile.cpp  PackageFile.h  Serializer.cpp  Serializer.h  (+2 more)
android/launcher-app/: build.gradle.kts
android/u3d-lib/: build.gradle
android/urho3d-lib/: build.gradle.kts
cmake/: Urho3D.cmake  UrhoDiscover.cmake
cmake/Modules/: CheckHost.cmake  FindDirectX.cmake  FindUrho3D.cmake  UrhoCommon.cmake
cmake/Toolchains/: MinGW.cmake
docker/: README.md
docker/u3d-android/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
script/: .bash_helpers.sh  clang-format.sh  clang-tidy.sh  cmake_emscripten.sh  cmake_generic.bat  cmake_generic.sh  cmake_ios.sh  cmake_tvos.sh  cmake_vs.bat  cmake_vs2022.bat  cmake_vs2026.bat  cmake_xcode.sh  dockerized.sh
(+198 files in other folders)
